<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="swu.sun.yut.ob.drivingbetter.InformationActivity"
    android:background="@drawable/bg480">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cardata"
            android:id="@+id/textView16"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/h1" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/car_id"
                android:id="@+id/textView17"
                android:layout_weight="1"
                android:textSize="@dimen/h2"
                android:textColor="#f0eaea" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/textView18"
                android:layout_weight="1"
                android:textSize="@dimen/h2" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/mile_car"
                android:id="@+id/textView19"
                android:layout_weight="1"
                android:textSize="@dimen/h2"
                android:textColor="#f0eaea" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/textView20"
                android:layout_weight="1"
                android:textSize="@dimen/h2" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/act"
                android:id="@+id/textView21"
                android:layout_weight="1"
                android:textSize="@dimen/h2"
                android:textColor="#f0eaea" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/textView22"
                android:layout_weight="1"
                android:textSize="@dimen/h2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/textView33"
                android:layout_weight="1"
                android:textSize="@dimen/h2" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tag"
                android:id="@+id/textView23"
                android:layout_weight="1"
                android:textSize="@dimen/h2"
                android:textColor="#f0eaea" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/textView24"
                android:layout_weight="1"
                android:textSize="@dimen/h2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/textView34"
                android:layout_weight="1"
                android:textSize="@dimen/h2" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/insure"
                android:id="@+id/textView25"
                android:layout_weight="1"
                android:textSize="@dimen/h2"
                android:textColor="#f0eaea" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/textView26"
                android:layout_weight="1"
                android:textSize="@dimen/h2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/textView35"
                android:layout_weight="1"
                android:textSize="@dimen/h2" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/batt"
                android:id="@+id/textView27"
                android:layout_weight="1"
                android:textSize="@dimen/h2"
                android:textColor="#f0eaea" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/textView28"
                android:layout_weight="1"
                android:textSize="@dimen/h2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/textView36"
                android:layout_weight="1"
                android:textSize="@dimen/h2" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tire"
                android:id="@+id/textView29"
                android:layout_weight="1"
                android:textSize="@dimen/h2"
                android:textColor="#f0eaea" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/textView30"
                android:layout_weight="1"
                android:textSize="@dimen/h2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/textView37"
                android:layout_weight="1"
                android:textSize="@dimen/h2" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/engine_oil"
                android:id="@+id/textView31"
                android:layout_weight="1"
                android:textSize="@dimen/h2"
                android:textColor="#f0eaea" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/textView32"
                android:layout_weight="1"
                android:textSize="@dimen/h2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/textView38"
                android:layout_weight="1"
                android:textSize="@dimen/h2" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>